mail,projects, admin stuff

--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -62,6 +62,7 @@
 
 .form div.ok img.field_ok{
     display: inline;
+    vertical-align: top;
 }
 
 .form button{
@@ -131,10 +132,10 @@
         /* align-items: center; */
         margin-right: 0;
         width: 90vw;
-        height: 85vh;
-        position: absolute;
+        /* height: 85vh; */
+        /* position: absolute; */
         /* padding: 5vmin; */
-        top: 100vh;
+        /* top: 100vh; */
         padding-top: 4vmin;
     }
 
