--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -119,20 +119,20 @@
         bottom: 0;
         left: 0;
         width: 100%;
-        height: 100%;
+        height: 100% ;
         z-index: 1;
         opacity: 0;
         transition: all 0.3s;
-        border-top-width: 1px;
-        border-bottom-width: 1px;
-        border-top-style: solid;
-        border-bottom-style: solid;
-        border-top-color: white;
-        border-bottom-color: white;
+        border-left-width: 1px;
+        border-right-width: 1px;
+        border-right-style: solid;
+        border-left-style: solid;
+        border-left-color: white;
+        border-right-color: white;
         transform: scale(0.1, 1);
     }
     .btn-one:hover span {
-        letter-spacing: 2px;
+        letter-spacing: 1px;
     }
     .btn-one:hover::before {
         opacity: 1;	
