--- a/src/index.css
+++ b/src/index.css
@@ -11,8 +11,15 @@ body {
   font-size: 2.5vmin;
 }
 
+@media only screen and (max-width: 768px){
+  body{
+    font-size: 4vmin;
+  }
+}
+
 html {
   height: 100%;
+  
 }
 
 #root{
@@ -29,4 +36,5 @@ html {
   margin-inline-start: 0px;
   margin-inline-end: 0px;
   padding-inline-start: 0px;
+  font-family: Arial, Helvetica, sans-serif;
 }
